--- a/README
+++ b/README
@@ -1,12 +1,6 @@
 写于2017-6-26
 
-手动搭建一套webapp，记录日常工作，生活，见解等，如果条件允许，完成安卓APP开发
+手动搭建一套webapp，记录日常工作，生活，见解等
 
-计划一个月内完成
 
-每天有产出
-
-自我驱动
-
-https://github.com/michaelliao/awesome-python-webapp/blob/day-02/www/transwarp/db.py
 
